JWT for user working
